# python-flexdb

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py
flexdb/: __init__.py  flexdb.py
tests/: __init__.py  test_flexdb.py
