[metadata]
name = python-flexdb
version = 0.1.0
url = https://github.com/flexdb/python-flexdb
author = Adam K Dean
author_email = adam@flexdb.co
description = Python wrapper for the FlexDB REST API (https://flexdb.co)

[options]
packages = find:
install_requires =
    requests

[options.extras_require]
test =
    pytest
    python-dotenv
